Fix multiline command

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: Trigger rebuild
 
 on:
   schedule:
-        - cron: '55 3 * * *'
+        - cron: '03 4 * * *'
 
 jobs:
   trigger:
@@ -11,5 +11,5 @@ jobs:
     steps:
       - name: Trigger build on dockerhub
         run: |
-          - apt-get install curl
-          - curl -L -X POST https://hub.docker.com/api/build/v1/source/bae8da83-86af-432b-81c5-99883ad5dfe4/trigger/c0360b1f-9d0c-4b51-9431-b9b541137052/call/
+          apt-get install curl
+          curl -L -X POST https://hub.docker.com/api/build/v1/source/bae8da83-86af-432b-81c5-99883ad5dfe4/trigger/c0360b1f-9d0c-4b51-9431-b9b541137052/call/
