--- a/.github/workflows/watch.yml
+++ b/.github/workflows/watch.yml
@@ -25,9 +25,11 @@ jobs:
 
           sed -i -re "s/require vimeo\/psalm/require vimeo\/psalm:$last/" Dockerfile
           cat Dockerfile
-
       - name: Docker login
-        run: echo '${{ secrets.DOCKER_PASSWORD }}' | docker login --username ${{ secrets.DOCKER_USERNAME }} --password-stdin
+        uses:  docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build images
         run: docker build -t vimeo/psalm-github-actions:${{ steps.fetch_version.outputs.last }} .
