--- a/.github/workflows/watch.yml
+++ b/.github/workflows/watch.yml
@@ -9,6 +9,9 @@ jobs:
   docker:
     name: Push tagged docker image
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
 
     steps:
       - name: Checkout code
@@ -26,14 +29,18 @@ jobs:
 
           sed -i -re "s/require vimeo\/psalm/require vimeo\/psalm:$last/" Dockerfile
           cat Dockerfile
+
       - name: Docker login
-        uses:  docker/login-action@v2
+        uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build images
-        run: docker build -t vimeo/psalm-github-actions:${{ steps.fetch_version.outputs.last }} .
+        run: docker build -t ghcr.io/psalm/psalm-github-actions:${{ steps.fetch_version.outputs.last }} -t ghcr.io/psalm/psalm-github-actions:latest .
 
       - name: Publish
-        run: docker push vimeo/psalm-github-actions:${{ steps.fetch_version.outputs.last }}
+        run: |
+          docker push ghcr.io/psalm/psalm-github-actions:${{ steps.fetch_version.outputs.last }}
+          docker push ghcr.io/psalm/psalm-github-actions:latest
