Keep our scheduled workflow alive

--- a/.github/workflows/watch.yml
+++ b/.github/workflows/watch.yml
@@ -44,3 +44,13 @@ jobs:
         run: |
           docker push ghcr.io/psalm/psalm-github-actions:${{ steps.fetch_version.outputs.last }}
           docker push ghcr.io/psalm/psalm-github-actions:latest
+
+  workflow-keepalive:
+    if: github.event_name == 'schedule'
+    runs-on: ubuntu-latest
+    permissions:
+      actions: write
+    steps:
+      - uses: liskin/gh-workflow-keepalive@v1.1.0
+        with:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
