Add PHP version as optional action input
Psalm allows us to specify the PHP version it analyzes code against.
Exposing this option allows users of this action to supply a matrix of
PHP options to enable Psalm runs against each of the PHP versions they
would like to support, or just to analyze against a specific version of
PHP that differs from the container's installed version.

--- a/action.yml
+++ b/action.yml
@@ -43,7 +43,10 @@ inputs:
   relative_dir:
     description: If your composer file is not in the directory, you can specify the relative directory.
     required: false
-
+  php_version:
+    description: The PHP version to run Psalm against
+    required: false
+    default: ''
 
 runs:
   using: 'docker'
